--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,6 +1,9 @@
     <table>
         <tr valign="top">
             <td><img src="{{ post.author.avatar(36) }}"></td>
-            <td>{{ post.author.username }} says: {{ post.body }}</b></td>
+            <td>
+                <a href="{{ url_for('user', username=post.author.username) }}">{{ post.author.username }}</a>
+                says: {{ post.body }}</b>
+            </td>
         </tr>
     </table>
